<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".core.presentation.home.HomeFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/profile_circular_bg"
        android:paddingVertical="15dp"
        android:paddingHorizontal="-10dp"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toStartOf="@id/profile_image_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/search_for_movies_series_and_more"
        app:searchHintIcon="@null"
        app:searchIcon="@drawable/search_icon"
        app:theme="@style/AppSearchView" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/profile_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/profile_circular_bg"
        android:contentDescription="@string/profile_icon"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        android:scaleType="centerInside"
        android:src="@drawable/profile_icon"
        app:layout_constraintBottom_toBottomOf="@id/search_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_view" />

    <TextView
        android:id="@+id/tv_featured_series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/featured_series"
        android:textColor="@color/white_70"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        tools:layout="@layout/movies_list_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_featured_series" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_featured_series">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white_70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/please_wait_while_we_are_loading_your_data"
            android:textColor="@color/white_70"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>