<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.moviescleanarchitectureapp.core.domain.models.MovieDetailsModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="10dp"
        tools:context=".core.presentation.movie_details.MovieDetailsFragment">

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/iv_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/back_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back_arrow" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{model.title, default=@string/stranger_things}"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_movie_poster" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/profile_circular_bg"
            android:gravity="center"
            android:text="@{model.year, default = @string/_2019}"
            android:textColor="@color/white_70"
            app:layout_constraintEnd_toStartOf="@id/tv_minutes"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_minutes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/profile_circular_bg"
            android:gravity="center"
            android:text="@string/fifty_min"
            android:textColor="@color/white_70"
            app:layout_constraintBottom_toBottomOf="@id/tv_year"
            app:layout_constraintEnd_toStartOf="@id/iv_add_to_watchlist"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tv_year"
            app:layout_constraintTop_toTopOf="@id/tv_year" />

        <ImageView
            android:id="@+id/iv_add_to_watchlist"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/profile_circular_bg"
            android:contentDescription="@string/add_to_watchlist_icon"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:src="@drawable/watchlist_icon"
            app:layout_constraintBottom_toBottomOf="@id/tv_year"
            app:layout_constraintEnd_toStartOf="@id/iv_share"
            app:layout_constraintStart_toEndOf="@id/tv_minutes"
            app:layout_constraintTop_toTopOf="@id/tv_year" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/profile_circular_bg"
            android:contentDescription="@string/share_icon"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:src="@drawable/iv_share"
            app:layout_constraintBottom_toBottomOf="@id/tv_year"
            app:layout_constraintEnd_toStartOf="@id/iv_download"
            app:layout_constraintStart_toEndOf="@id/iv_add_to_watchlist"
            app:layout_constraintTop_toTopOf="@id/tv_year" />

        <ImageView
            android:id="@+id/iv_download"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/profile_circular_bg"
            android:contentDescription="@string/download_icon"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:src="@drawable/iv_download"
            app:layout_constraintBottom_toBottomOf="@id/tv_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_share"
            app:layout_constraintTop_toTopOf="@id/tv_year" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_year">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@{model.description, default = @string/share_icon}"
                android:textColor="@color/white_70"
                android:textSize="14sp" />

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>